--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
     <div class="container">
    <div class="circle">
-    <img src="images/pro.jpg" height="245" width="245" style="border-radius: 50%;margin-top: 5px;margin-left: 5px;">
+    <img src="images/pro.jpeg" height="245" width="245" style="border-radius: 50%;margin-top: 5px;margin-left: 5px;">
    </div>
 
     <div class="introduction">
@@ -77,17 +77,17 @@
           A Passionate <span class="one" style="font-size: 25px; color: #6711f1;">Web Developer</span> & 
           <span class="one" style="font-size: 25px; color: #6711f1;">UI/UX Designer</span>
         </p>
-        <p >To work in a challenging and dynamicenvironment and <br/>to keep adding
+        <p >To work in a challenging and dynamic environment and <br/>to keep adding
           value to the organization seeking a <br/>suitable position that offers sample scope for professional<br/> growth and
           learning with being resourceful and innovate</p>
           <div class="my">
             <div class="BAC">
               <div>Birthday<span style="margin-left: 25px">|</span><span style="margin-left: 25px;">06-05-2002</span></div>
-              <div style="margin-top: 10px;">Age<span style="margin-left: 56px;">|</span><span style="margin-left: 25px;">22yr</span></div>
+              <div style="margin-top: 10px;">Age<span style="margin-left: 56px;">|</span><span style="margin-left: 25px;">23yr</span></div>
               <div style="margin-top: 10px;">College<span style="margin-left: 30px;">|</span><span style="margin-left: 27px;">Vignan College</span></div>
             </div>
             <div class="EPA" style="margin-left: 20px;">
-              <div>Email<span style="margin-left: 39px;">|</span><span style="margin-left: 25px; "></span>saketh6502@</div>
+              <div>Email<span style="margin-left: 39px;">|</span><span style="margin-left: 25px; "></span>saketh6502@gmail.com</div>
               <div style="margin-top: 10px;">Phone<span style="margin-left: 32px;">|</span><span style="margin-left: 20px;">8522886262</span></div>
               <div style="margin-top: 10px;">Address<span style="margin-left: 20px;">|</span><span style="margin-left: 20px;">Vizag</span></div>
             </div>
@@ -233,7 +233,7 @@
           <div class="SiteName">
             <h3>REACT</h3>
             <div class="link">
-              <a href="https://saranyapabbithi.github.io/test/" target="_blank"><button style="border:none; background: linear-gradient(to right,#c670eac9,#f0526ac2); border: 1px solid white; border-radius: 20px; height: 30px; width: 110px; color: white;">Preview</button></a>
+              <a href="https://saketh6502.github.io/React/" target="_blank"><button style="border:none; background: linear-gradient(to right,#c670eac9,#f0526ac2); border: 1px solid white; border-radius: 20px; height: 30px; width: 110px; color: white;">Preview</button></a>
               <!-- <a href="https://github.com/saranyapabbithi/test.git" target="_blank"><button style="border:none;  background: linear-gradient(to right,#c670eac9,#f0526ac2); border: 1px solid white; margin-left: 10px; border-radius: 20px; height: 30px; width: 110px; color: white;">SourceCode</button></a> -->
             </div>
         </div>
