Really update index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       
     </div>
     
-   <a href="images/saketh new resume.pdf" download target="blank"><button class="btn2"><b>Download Resume</b></button></a>
+   <a href="images/Saketh.N.pdf" download target="blank"><button class="btn2"><b>Download Resume</b></button></a>
     </div>
   </div>
   <hr style="margin-top: 110px; margin-left:100px;margin-right: 100px;" id="About"/>
@@ -92,7 +92,7 @@
               <div style="margin-top: 10px;">Address<span style="margin-left: 20px;">|</span><span style="margin-left: 20px;">Vizag</span></div>
             </div>
             </div>
-        <a href="images/saketh new resume.pdf" download target="blank"><button class="btn3"><b>Download Resume</b></button></a>
+        <a href="images/Saketh.N.pdf" download target="blank"><button class="btn3"><b>Download Resume</b></button></a>
       </div>
     </div>
  </div>
